--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=EmpleadosAPI
+
+#Configuración de MySQL. Si fuera MariaDB sería jdbc:mariadb://localhost:3306/tienda
+spring.datasource.url=jdbc:mysql://localhost:3306/empleados
+spring.datasource.username=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#Configuración de JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+#Para ver las SQL que se ejecutan poner las siguientes (opcional)
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
